# LWTR4SC

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-examples.yml  ci-test-writer.yml
contrib/: dump_ftr.py  requirements.txt
example/: CMakeLists.txt  lwtr_event_example.cpp  lwtr_event_example_wait.cpp  lwtr_example.cpp
src/: CMakeLists.txt  lwtr-config.cmake.in
src/ftr/: ftr_writer.h
src/lwtr/: lwtr.cpp  lwtr.h  lwtr_ftr.cpp  lwtr_text.cpp
src/lwtr/cbor/: chunked_writer.h
src/lwtr/util/: lz4_streambuf.cpp  lz4_streambuf.h
test/: CMakeLists.txt  test_writer.cpp
